2005-03-01  Stipe Tolj  <stolj@wapme.de> 
    * configure[.in]: added support to find docbook.dsl file on Debian 
      unstable. Thanks to Benjamin for this patch.
      [Msg-ID: <20050219161644.GA938@xaos.realthought.net>]

2003-02-23 Aarno Syvanen <as@gni.ch>
    * doc/userguide/userguide.xml: changed the added si doc
      to minimum one, so that users can minimize the 
      generated si message.

2005-02-20 Aarno Syvanen <as@gni.ch>
    * doc/userguide/userguide.xml: added an example si document
    * gw/smsbox.c: ppg dlr-url should work now when it is a
      configuration variable. Fix suggested by Davy Chan
    * gw/wapbox.c: reload (SIGHUP) does not change value of 
      configuration variable concatenation
    * gw/smsc/smsc_at.c: Handle a very slow initialisation. This is
      a patch by Andreas.
    * test/test_ppg.c: Added two new push header, used to ask
    * delivery reports

2005-02-18  Stipe Tolj  <stolj@wapme.de> 
    * gw/wap-appl.c, wap/cookies.c, wap/wsp_session.c: fixing an assertion
      PANIC, while passing a NULLed List* to cookies.c:add_cookie_to_cache().
      We now gwlist_create() the cookies list inside machine_create().
      Thanks to Jacob Dalsgaard <jakob.dalsgaard@cybercomgroup.com> for
      reporting this and Davy for pushing the "recalling"-button.
      [Msg-ID: <4018EB52.306@cybercomgroup.com>]

2005-02-18  Stipe Tolj  <stolj@wapme.de> 
    * wap/wtp.c: fixing bug #197, causing wapbox to PANIC on truncated WDP
      datagrams. Thanks to Jonathan Houser <jhouser@wirelessonenet.com> for
      reporing this bug in ML users@kannel.org.
      [Msg-ID: <4214F128.4090007@wirelessonenet.com>]

2005-02-17  Stipe Tolj  <stolj@wapme.de> 

    * test/test_radius_pdu.c: some minor issues, like usage display
etc.

2005-02-17  Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_smpp.c: fixed typo while setting submit_sm.data_coding.
      Thanks to Davy Chan <chandave at cs.ust.hk> for the patch.